# cord

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  config.bat  run.bat  run.sh
assets/shaders/: final.frag  final.vert  shape2d.vert  shape3d.frag  shape3d.vert  tex_shape3d.frag  tex_shape3d.vert
glad/glad/: glad.h
src/: main.cpp
src/cord/: color.cpp  color.hpp  director.cpp  director.hpp  framebuffer.cpp  framebuffer.hpp  glad.c  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/cord/material/: basic_material.cpp  basic_material.hpp  flat_material.cpp  flat_material.hpp  material.cpp  material.hpp  textured_material.cpp  textured_material.hpp
src/cord/node/: camera3d.cpp  camera3d.hpp  mesh.cpp  mesh.hpp  node.cpp  node.hpp  node3d.cpp  node3d.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp  view3d.cpp  view3d.hpp
src/cord/texture/: image.cpp  image.hpp  texture.cpp  texture.hpp
